--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,9 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - "/srv/mysql:/var/lib/mysql"
+      - mysql-data:/var/lib/mysql
     container_name: mysql
     restart: always
+
+volumes:
+  mysql-data:    
